Basic interaction done.

--- a/index.html
+++ b/index.html
@@ -15,53 +15,60 @@
   <div id=game-wrapper>
     <div id=game>
       <div id=scene-menu class=scene>
-        <div id=pane-options>
-        </div>
-        <div id=start-button class="btn">RESET</div>
+        <div id=pane-title>Encoding Practice</div>
+        <div id=pane-options></div>
+        <div id=start-button class="btn">START</div>
       </div>
       <div id=scene-quiz class=scene>
         <div id=pane-hud>
-          <div id=back-button class=btn>Back</div>
+          <div id=hud-qid>0</div>
+          <div id=hud-qtype>QUESTION TYPE</div>
+          <div id=hud-menu class=btn>Menu</div>
         </div>
         <div id=pane-screen>
           <div id=screen></div>
         </div>
+        <div id=pane-hint></div>
         <div id=pane-keyboard>
-          <div class=key-row>
-            <div class="btn key alph">A</div>
-            <div class="btn key alph">B</div>
-            <div class="btn key alph">C</div>
-            <div class="btn key alph">D</div>
-            <div class="btn key alph">E</div>
-            <div class="btn key alph">F</div>
-            <div class="btn key alph">G</div>
-          </div>
-          <div class=key-row>
-            <div class="btn key alph">H</div>
-            <div class="btn key alph">I</div>
-            <div class="btn key alph">J</div>
-            <div class="btn key alph">K</div>
-            <div class="btn key alph">L</div>
-            <div class="btn key alph">M</div>
-            <div class="btn key alph">N</div>
-          </div>
-          <div class=key-row>
-            <div class="btn key alph">O</div>
-            <div class="btn key alph">P</div>
-            <div class="btn key alph">Q</div>
-            <div class="btn key alph">R</div>
-            <div class="btn key alph">S</div>
-            <div class="btn key alph">T</div>
-            <div class="btn key alph">U</div>
-          </div>
-          <div class=key-row>
-            <div class="btn key alph">V</div>
-            <div class="btn key alph">W</div>
-            <div class="btn key alph">X</div>
-            <div class="btn key alph">Y</div>
-            <div class="btn key alph">Z</div>
+          <div id=meta-keys>
             <div class="btn key btn-red" id="key-bksp">&lt;</div>
             <div class="btn key btn-green" id="key-submit">OK</div>
+          </div>
+          <div id=keyboard-english class=keyboard>
+            <div class=key-row>
+              <div class="btn key alph">A</div>
+              <div class="btn key alph">B</div>
+              <div class="btn key alph">C</div>
+              <div class="btn key alph">D</div>
+              <div class="btn key alph">E</div>
+              <div class="btn key alph">F</div>
+              <div class="btn key alph">G</div>
+            </div>
+            <div class=key-row>
+              <div class="btn key alph">H</div>
+              <div class="btn key alph">I</div>
+              <div class="btn key alph">J</div>
+              <div class="btn key alph">K</div>
+              <div class="btn key alph">L</div>
+              <div class="btn key alph">M</div>
+              <div class="btn key alph">N</div>
+            </div>
+            <div class=key-row>
+              <div class="btn key alph">O</div>
+              <div class="btn key alph">P</div>
+              <div class="btn key alph">Q</div>
+              <div class="btn key alph">R</div>
+              <div class="btn key alph">S</div>
+              <div class="btn key alph">T</div>
+              <div class="btn key alph">U</div>
+            </div>
+            <div class=key-row>
+              <div class="btn key alph">V</div>
+              <div class="btn key alph">W</div>
+              <div class="btn key alph">X</div>
+              <div class="btn key alph">Y</div>
+              <div class="btn key alph">Z</div>
+            </div>
           </div>
         </div>
       </div>
