--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
       </div>
       <div id=scene-quiz class=scene>
         <div id=pane-hud>
-          <div id=hud-qid>0</div>
+          <div id=hud-score><div class=hud-label>SCORE</div><div id=disp-score>0</div></div>
+          <div id=hud-misses><div class=hud-label>MISSES</div><div id=disp-misses>0</div></div>
           <div id=hud-qtype>QUESTION TYPE</div>
           <div id=hud-menu class=btn>MENU</div>
         </div>
