--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="questions.js"></script>
+  <script type="text/javascript" src="qtypes.js"></script>
   <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
@@ -32,9 +32,8 @@
         <div id=pane-screen>
           <div id=screen></div>
         </div>
-        <div id=pane-hint></div>
         <div id=pane-keyboard>
-          <div id=keyboard-english class=keyboard>
+          <div id=keyboard class=keyboard>
             <div class=key-row>
               <div class="btn key alph">A</div>
               <div class="btn key alph">B</div>
