Styling of screen

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
           <div id=hud-menu class=btn>MENU</div>
         </div>
         <div id=pane-screen>
-          <div id=screen></div>
+          <div id=screen class=centerize></div>
         </div>
         <div id=pane-keyboard>
           <div id=keyboard class=keyboard>
