--- a/index.html
+++ b/index.html
@@ -9,74 +9,31 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script type="text/javascript" src="qtypes.js"></script>
   <script type="text/javascript" src="main.js"></script>
 </head>
-<body>
+<body class=centerize>
   <div id=game-wrapper>
     <div id=game>
-      <div id=scene-menu class=scene>
-        <div id=pane-title>Encoding Practice</div>
-        <div id=pane-options></div>
-        <div id=pane-start class=centerize>
-          <div id=start-button class="btn">START</div>
-        </div>
+      <div id=scene-menu class="scene centerize hidden">
+        <h1>Encoding Practice</h1>
+        <button type=button id=start-button>START</button>
       </div>
-      <div id=scene-quiz class=scene>
-        <div id=pane-hud>
-          <div id=hud-score><div class=hud-label>SCORE</div><div id=disp-score>0</div></div>
-          <div id=hud-misses><div class=hud-label>MISSES</div><div id=disp-misses>0</div></div>
-          <div id=hud-qtype>QUESTION TYPE</div>
-          <div id=hud-menu class=btn>MENU</div>
+      <div id=scene-quiz class="scene hidden">
+        <div id=hud>
+          <div id=score>0</div>
+          <div id=qtype>QUESTION TYPE</div>
+          <button type=button id=menu-button>≡</button>
         </div>
-        <div id=pane-screen>
-          <div id=screen class=centerize></div>
-        </div>
-        <div id=pane-keyboard>
-          <div id=keyboard class=keyboard>
-            <div class=key-row>
-              <div class="btn key alph">A</div>
-              <div class="btn key alph">B</div>
-              <div class="btn key alph">C</div>
-              <div class="btn key alph">D</div>
-              <div class="btn key alph">E</div>
-              <div class="btn key alph">F</div>
-              <div class="btn key alph">G</div>
-            </div>
-            <div class=key-row>
-              <div class="btn key alph">H</div>
-              <div class="btn key alph">I</div>
-              <div class="btn key alph">J</div>
-              <div class="btn key alph">K</div>
-              <div class="btn key alph">L</div>
-              <div class="btn key alph">M</div>
-              <div class="btn key alph">N</div>
-            </div>
-            <div class=key-row>
-              <div class="btn key alph">O</div>
-              <div class="btn key alph">P</div>
-              <div class="btn key alph">Q</div>
-              <div class="btn key alph">R</div>
-              <div class="btn key alph">S</div>
-              <div class="btn key alph">T</div>
-              <div class="btn key alph">U</div>
-            </div>
-            <div class=key-row>
-              <div class="btn key alph">V</div>
-              <div class="btn key alph">W</div>
-              <div class="btn key alph">X</div>
-              <div class="btn key alph">Y</div>
-              <div class="btn key alph">Z</div>
-              <div class="btn key btn-red" id="key-bksp">&lt;</div>
-              <div class="btn key btn-green" id="key-submit">OK</div>
-            </div>
-          </div>
-        </div>
+        <div id=screen></div>
       </div>
-      <div id=scene-preload class=scene>
-        <div class=centerize>
-          <div id=pane-loading>Loading ...</div>
-        </div>
+      <div id=scene-preload class="scene centerize">
+        <div id=loading-message>Loading ...</div>
+      </div>
+      <div id=cover-correct class="cover centerize hidden">
+        Correct!
+      </div>
+      <div id=cover-incorrect class="cover centerize hidden">
+        Incorrect!
       </div>
     </div>
   </div>
